Nav fix (z-index)

--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,7 @@ nav {
     top: 40px;
     right: 30px;
     line-height: 50px;
+    z-index: 1;
 }
 
 nav li {
